ALTER TYPE "OrderStatus" ADD VALUE IF NOT EXISTS 'PENDING_PAYMENT';
ALTER TYPE "OrderStatus" ADD VALUE IF NOT EXISTS 'RESERVED';
ALTER TYPE "OrderStatus" ADD VALUE IF NOT EXISTS 'COMPLETED';
ALTER TYPE "OrderStatus" ADD VALUE IF NOT EXISTS 'EXPIRED';

ALTER TYPE "SellerOrderStatus" ADD VALUE IF NOT EXISTS 'RESERVED';
ALTER TYPE "SellerOrderStatus" ADD VALUE IF NOT EXISTS 'COMPLETED';
ALTER TYPE "SellerOrderStatus" ADD VALUE IF NOT EXISTS 'EXPIRED';

ALTER TYPE "PaymentMethod" ADD VALUE IF NOT EXISTS 'CASH_ON_PICKUP';

ALTER TYPE "InventoryChangeReason" ADD VALUE IF NOT EXISTS 'RESERVATION';
ALTER TYPE "InventoryChangeReason" ADD VALUE IF NOT EXISTS 'RESERVATION_RELEASE';
ALTER TYPE "InventoryChangeReason" ADD VALUE IF NOT EXISTS 'PICKUP_COMPLETION';

ALTER TABLE "ProductVariant"
  ADD COLUMN "totalStock" INTEGER NOT NULL DEFAULT 0,
  ADD COLUMN "availableStock" INTEGER NOT NULL DEFAULT 0,
  ADD COLUMN "reservedStock" INTEGER NOT NULL DEFAULT 0;

UPDATE "ProductVariant"
SET "totalStock" = "stockOnHand",
    "availableStock" = "stockOnHand";

ALTER TABLE "Order"
  ALTER COLUMN "shippingAddressId" DROP NOT NULL,
  ADD COLUMN "depositAmount" DECIMAL(12,2) NOT NULL DEFAULT 0,
  ADD COLUMN "remainingBalance" DECIMAL(12,2) NOT NULL DEFAULT 0,
  ADD COLUMN "pickupScheduledAt" TIMESTAMP(3),
  ADD COLUMN "expiresAt" TIMESTAMP(3),
  ADD COLUMN "clearCartOnPaid" BOOLEAN NOT NULL DEFAULT false;

ALTER TABLE "SellerOrder"
  ADD COLUMN "remainingBalance" DECIMAL(12,2) NOT NULL DEFAULT 0,
  ADD COLUMN "balancePaidAt" TIMESTAMP(3);

CREATE INDEX "Order_pickupScheduledAt_idx" ON "Order"("pickupScheduledAt");
CREATE INDEX "Order_expiresAt_idx" ON "Order"("expiresAt");
